lobechat/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lobe-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lobe-chat
  template:
    metadata:
      labels:
        app: lobe-chat
    spec:
      containers:
      - name: lobe-chat
        image: lobehub/lobe-chat
        ports:
        - containerPort: 3210


---
apiVersion: v1
kind: Service
metadata:
  name: lobe-chat-service
spec:
  selector:
    app: lobe-chat
  ports:
    - protocol: TCP
      port: 3210
      targetPort: 3210
