lobechat/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lobe-chat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: chat.rolancia.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lobe-chat-service
            port:
              number: 3210
  tls:
  - hosts:
    - chat.rolancia.com
    secretName: tls
